Download link: https://www.filepuma.com/download/google_chrome_32bit_49.0.2623.112-11045/download/
It appeared after final fix for CORE-11536, commit 35f62fc5ba0b69e7335ff41400cb3b45660f4557, before this, up to 956086d, Chrome could load any web-pages correctly with no--sandbox enabled. After this, it cannot load them at all, as any third-party websites, such Chrome settings or Chrome sign-in page, or just a new tab.
And not only with Google Chrome, as it appears, this is a global regsression with all chromium-based browsers or client apps, such as Spotify client 1.2.29. By the way, the last worked and played music perfectly without no-sandbox.-