[0.4.10] [WIN32SS][FONT] Fix GetTextFace function and related (#829) CORE-14926

Google Chrome with -no-sandbox parameter in ReactOS wouldn't display
the web page anymore because first-chance exception raised.

- Remove FullName, Style, and FaceName members from TEXTOBJ structure.
- Add TextFace member into TEXTOBJ structure.
- Add MatchFontName() and MatchFontNames() helper functions.
- Fix GetTextFace() and related.

The symptom started showing with
0.4.10-dev-466-g
35f62fc5ba0b69e7335ff41400cb3b45660f4557

The fix was cherry-picked from commit
0.4.11-dev-48-g
c8749d379beeb3a078c296feca1f4cdb3e9d11f1

Many Thx to Katayama, Mark & Doug.